Move to java 8